--- a/src/vars/gpdb.yml
+++ b/src/vars/gpdb.yml
@@ -1,7 +1,7 @@
 ---
 
-# [从外部传入]greenplum 的版本h号(需要与files/目录下的rpm安装包对应)
-#- version: "6.16.3"
+# greenplum 的版本h号(需要与files/目录下的rpm安装包对应)
+- version: "6.16.3"
 
 # greenplum的master节点的主机名称
 - greenplum_master_node_hostname: 'mdw'
@@ -24,6 +24,6 @@
 # [从外部传入]Greenplum软件RPM安装包的路径
 # - package_path: passed via the command line with: -e package_path=./greenplum-db-6.6.0-rhel7-x86_64.rpm
 
-# [从外部传入]greenplum的segment节点上配置primary或mirror的实例个数
+# greenplum的segment节点上配置primary或mirror的实例个数
 # (需要大于等于1，可根据服务器节点的内存情况进行调整，内存越大，该参数值越大)
-#- greenplum_primay_segments_per_host_number: 2
+- greenplum_primay_segments_per_host_number: 2
