!9 support 6.17.3 * update to 6.17.3

--- a/host.ini
+++ b/host.ini
@@ -37,3 +37,13 @@ greenplum_standby_node='node2'
 
 ## greenplum segment nodes, must at least 2 nodes
 greenplum_segment_nodes='node3 node4'
+
+# whether can connect to internet network
+#####################################################################
+## if can not connect internet,Please do flollows:
+## (1) install all rpm package for all node host first by download 
+## from : https://pan.baidu.com/s/1NfDBqHl1VD8X1kGKb0SigQ 
+## password is: 4ld8
+## (2) Synchronize of all node host manually
+#####################################################################
+network_connected=true
