--- a/host.ini
+++ b/host.ini
@@ -41,9 +41,7 @@ greenplum_segment_nodes='node3 node4'
 # whether can connect to internet network
 #####################################################################
 ## if can not connect internet,Please do flollows:
-## (1) install all rpm package for all node host first by download 
-## from : https://pan.baidu.com/s/1NfDBqHl1VD8X1kGKb0SigQ 
-## password is: 4ld8
-## (2) Synchronize of all node host manually
+## (1) install all dependency rpm packages 
+## (2) Synchronize time for all node host manually
 #####################################################################
 network_connected=true
