[WIP] trino, vm's, netdata, etc

--- a/host.ini
+++ b/host.ini
@@ -13,10 +13,9 @@
 
 #all node connection information, must at least 3 nodes
 [node]
-192.168.31.54 hostname=node1 ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='123321'
-192.168.31.55 hostname=node2 ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='123321'
-192.168.31.56 hostname=node3 ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='123321'
-192.168.31.57 hostname=node4 ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='123321'
+ER407-node1.tc.test hostname=ER407-node1.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
+ER407-node2.tc.test hostname=ER407-node2.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
+ER407-node3.tc.test hostname=ER407-node3.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
 
 [all:vars]
 
@@ -30,13 +29,13 @@ greenplum_data_directory='/data/gpdb'
 
 # greenplum node type
 ## greenplum master node, should only one node
-greenplum_master_node='node1'
+greenplum_master_node='ER407-node1.tc.test'
 
 # greenplum standby node, should only one node, optional
-greenplum_standby_node='node2'
+greenplum_standby_node='ER407-node2.tc.test'
 
 ## greenplum segment nodes, must at least 2 nodes
-greenplum_segment_nodes='node3 node4'
+greenplum_segment_nodes='ER407-node1.tc.test ER407-node2.tc.test ER407-node3.tc.test'
 
 # whether can connect to internet network
 #####################################################################
