--- a/src/group_vars/all.yaml
+++ b/src/group_vars/all.yaml
@@ -1,4 +1,7 @@
 ---
+trino_user: 'trino'
+
+trino_user_password: '1qazXSW@'
 
 # greenplum run of each host user
 greenplum_admin_user: 'gpadmin'
@@ -7,4 +10,4 @@ greenplum_admin_user: 'gpadmin'
 greenplum_admin_password: '1qazXSW@'
 
 # greenplum instance number for each of segment node, must greater than 0
-greenplum_primary_segments_per_host_number: 2
+greenplum_primary_segments_per_host_number: 10
