--- a/src/host.ini
+++ b/src/host.ini
@@ -28,6 +28,8 @@
 # greenplum data storage path at each hosts
 greenplum_data_directory='/data/gpdb'
 
+trino_config_directory='/srv/trino/etc'
+
 # greenplum node type
 ## greenplum master node, should only one node
 greenplum_master_node='node1'
@@ -40,3 +42,5 @@ greenplum_segment_nodes='node3 node4'
 
 # greenplum instance number for each of segment node, must greater than 0
 greenplum_primary_segments_per_host_number= 2
+
+
