[WIP] some improvements

--- a/bin/host.ini
+++ b/bin/host.ini
@@ -13,10 +13,10 @@
 
 #all node connection information, must at least 3 nodes
 [node]
-ER407-node-1.tc.test hostname=ER407-node1.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
-ER407-node-2.tc.test hostname=ER407-node2.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
-ER407-node-3.tc.test hostname=ER407-node3.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
-ER407-node-4.tc.test hostname=ER407-node4.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
+ER407-node-1.tc.test hostname=ER407-node-1.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass=''
+ER407-node-2.tc.test hostname=ER407-node-2.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass=''
+ER407-node-3.tc.test hostname=ER407-node-3.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass=''
+;ER407-node-4.tc.test hostname=ER407-node-4.tc.test ansible_ssh_user=root ansible_ssh_port=22 ansible_ssh_pass='1'
 
 [trino_master]
 ER407-node-1.tc.test
@@ -25,7 +25,10 @@ ER407-node-1.tc.test
 ER407-node-1.tc.test
 ER407-node-2.tc.test
 ER407-node-3.tc.test
+#ER407-node-4.tc.test
 
+[nifi]
+ER407-node-2.tc.test
 
 [all:vars]
 
@@ -39,6 +42,15 @@ greenplum_data_directory='/data/gpdb'
 
 trino_config_directory='/srv/trino/etc'
 
+nifi_base_dir='/srv/nifi'
+nifi_config_directory='/srv/nifi/conf'
+nifi_data_directory='/data/nifi'
+nifi_additional_lib_directory='/srv/nifi/lib'
+
+nifi_registry_config_directory='/srv/nifi-registry/conf'
+nifi_registry_data_directory=/data/nifi-registry
+
+
 data_directory='/data'
 
 # greenplum node type
@@ -49,7 +61,8 @@ greenplum_master_node='ER407-node-1.tc.test'
 # greenplum_standby_node='ER407-node2.tc.test'
 
 ## greenplum segment nodes, must at least 2 nodes
-greenplum_segment_nodes='ER407-node-1.tc.test ER407-node-2.tc.test ER407-node-3.tc.test ER407-node-4.tc.test'
+;greenplum_segment_nodes='ER407-node-1.tc.test ER407-node-2.tc.test ER407-node-3.tc.test'
+greenplum_segment_nodes='ER407-node-1.tc.test ER407-node-3.tc.test'
 
 # whether can connect to internet network
 #####################################################################
