--- a/src/roles/trino/files/catalog/postgres.properties
+++ b/src/roles/trino/files/catalog/postgres.properties
@@ -1,4 +1,4 @@
 connector.name=postgresql
-connection-url=
-connection-user=
+connection-url=jdbc:postgresql://option-manager-stage-gpt-msk.1c.ru:5432/option_stage_db
+connection-user=option_stage_user
 connection-password=
